# ScalableMTRL

./: .gitignore  README.md  SAC_vs_MTSAC_Comparison.md  export_wandb.py  plot.ipynb  pyproject.toml
examples/meta_learning/: maml_trpo_ml1.py  maml_trpo_ml10.py  maml_trpo_ml10_v1.py  maml_trpo_ml1_v1.py  maml_trpo_ml25.py  maml_trpo_ml45.py  maml_trpo_ml45_v1.py  rl2_ml1.py  rl2_ml10.py  rl2_ml10_v1.py  rl2_ml1_v1.py  rl2_ml25.py  rl2_ml45.py  rl2_ml45_v1.py
examples/multi_task/: care_mt50.py  dmoe_mt50.py  moore_mt10.py  moore_mt50.py  mtmhsac_mt10.py  mtmhsac_mt10_v1.py  mtmhsac_mt50.py  mtsac_mt10.py  paco_mt10.py  pcgrad_mt10.py  pcgrad_mt10_v1.py  pcgrad_mt50.py  ppo_mt10.py  ppo_mt25.py  ppo_mt50.py  sac_mt10.py  smoe_mt10.py  smoe_mt50.py  smoe_pcgrad_mt50.py  softmodules_mt10.py
metaworld_algorithms/: __init__.py  checkpoint.py  run.py  types.py
metaworld_algorithms/config/: envs.py  networks.py  nn.py  optim.py  rl.py  utils.py
metaworld_algorithms/envs/: __init__.py  metaworld.py
metaworld_algorithms/monitoring/: utils.py
metaworld_algorithms/nn/: __init__.py  base.py  care.py  dense_moe.py  distributions.py  film.py  initializers.py  moore.py  multi_head.py  paco.py  regularizers.py  soft_modules.py  sparse_moe.py  utils.py
metaworld_algorithms/optim/: dummy.py  gradnorm.py  (+1 more)
wandb_logs/: mt50_pcgrad_seed1_data.csv  mt50_smoe_e6_se0_k4_lb_seed1_data.csv  wandb_export_dmoe.csv  wandb_export_load_smoe-lb.csv  wandb_export_load_smoe.csv  wandb_export_mean_success_rate.csv  wandb_export_mlp.csv  wandb_export_smoe-lb.csv  wandb_export_smoe.csv
(+10 files in other folders)
